--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=GigaDisplayRGB
+name=Arduino_GigaDisplayRGB
 version=0.0.1
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
@@ -7,4 +7,4 @@ paragraph=
 category=Device Control
 url=https://www.arduino.cc/
 architectures=mbed_giga
-includes=GigaDisplayRGB.h
+includes=Arduino_GigaDisplayRGB.h
