--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,5 @@ category=Device Control
 url=https://www.arduino.cc/
 architectures=mbed_giga
 includes=Arduino_GigaDisplayRGB.h
+depends=Arduino_BMI270_BMM150,ArduinoGraphics
+
