--- a/library.properties
+++ b/library.properties
@@ -1,12 +1,11 @@
-name=Arduino_GigaDisplayRGB
+name=Arduino_GigaDisplay
 version=0.0.1
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Controls the RGB on the GIGA Display Shield
+sentence=Examples for GIGA Display Shield
 paragraph=
 category=Device Control
 url=https://www.arduino.cc/
 architectures=mbed_giga
-includes=Arduino_GigaDisplayRGB.h
-depends=Arduino_BMI270_BMM150,ArduinoGraphics
-
+includes=Arduino_GigaDisplay.h
+depends=Arduino_BMI270_BMM150,ArduinoGraphics,lvgl
