add gfx examples

--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Device Control
 url=https://www.arduino.cc/
 architectures=mbed_giga
 includes=Arduino_GigaDisplay.h
-depends=Arduino_BMI270_BMM150,Arduino_GigaDisplayTouch,ArduinoGraphics,lvgl
+depends=Arduino_BMI270_BMM150,Arduino_GigaDisplayTouch,ArduinoGraphics,Arduino_GigaDisplay_GFX,lvgl
