Add github workflows

--- a/library.properties
+++ b/library.properties
@@ -5,7 +5,7 @@ maintainer=Arduino <info@arduino.cc>
 sentence=Examples for GIGA Display Shield
 paragraph=
 category=Device Control
-url=https://www.arduino.cc/
-architectures=mbed_giga
+url=https://github.com/arduino-libraries/Arduino_GigaDisplay
+architectures=mbed_giga,mbed_portenta
 includes=Arduino_GigaDisplay.h
-depends=Arduino_BMI270_BMM150,Arduino_GigaDisplayTouch,ArduinoGraphics,Arduino_GigaDisplay_GFX,lvgl
+depends=Arduino_BMI270_BMM150,Arduino_GigaDisplayTouch,ArduinoGraphics,Arduino_GigaDisplay_GFX,lvgl,Arducam_dvp
