--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,46 +1,33 @@
-# Source: https://github.com/arduino/tooling-project-assets/blob/main/workflow-templates/sync-labels-npm.md
+# Source: https://github.com/arduino/tooling-project-assets/blob/main/workflow-templates/sync-labels.md
 name: Sync Labels
 
-env:
-  # See: https://github.com/actions/setup-node/#readme
-  NODE_VERSION: 16.x
-  CONFIGURATIONS_FOLDER: .github/label-configuration-files
-  CONFIGURATIONS_ARTIFACT: label-configuration-files
-
-# See: https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
     paths:
-      - ".github/workflows/sync-labels-npm.ya?ml"
+      - ".github/workflows/sync-labels.ya?ml"
       - ".github/label-configuration-files/*.ya?ml"
-      - "package.json"
-      - "package-lock.json"
   pull_request:
     paths:
-      - ".github/workflows/sync-labels-npm.ya?ml"
+      - ".github/workflows/sync-labels.ya?ml"
       - ".github/label-configuration-files/*.ya?ml"
-      - "package.json"
-      - "package-lock.json"
   schedule:
     # Run daily at 8 AM UTC to sync with changes to shared label configurations.
     - cron: "0 8 * * *"
   workflow_dispatch:
   repository_dispatch:
 
+env:
+  CONFIGURATIONS_FOLDER: .github/label-configuration-files
+  CONFIGURATIONS_ARTIFACT: label-configuration-files
+
 jobs:
   check:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
 
       - name: Download JSON schema for labels configuration file
         id: download-schema
@@ -50,24 +37,24 @@ jobs:
           location: ${{ runner.temp }}/label-configuration-schema
 
       - name: Install JSON schema validator
-        run: npm install
+        run: |
+          sudo npm install \
+            --global \
+            ajv-cli \
+            ajv-formats
 
       - name: Validate local labels configuration
         run: |
           # See: https://github.com/ajv-validator/ajv-cli#readme
-          npx \
-            --package=ajv-cli \
-            --package=ajv-formats \
-            ajv validate \
-              --all-errors \
-              -c ajv-formats \
-              -s "${{ steps.download-schema.outputs.file-path }}" \
-              -d "${{ env.CONFIGURATIONS_FOLDER }}/*.{yml,yaml}"
+          ajv validate \
+            --all-errors \
+            -c ajv-formats \
+            -s "${{ steps.download-schema.outputs.file-path }}" \
+            -d "${{ env.CONFIGURATIONS_FOLDER }}/*.{yml,yaml}"
 
   download:
     needs: check
     runs-on: ubuntu-latest
-    permissions: {}
 
     strategy:
       matrix:
@@ -94,14 +81,11 @@ jobs:
   sync:
     needs: download
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      issues: write
 
     steps:
       - name: Set environment variables
         run: |
-          # See: https://docs.github.com/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
+          # See: https://docs.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable
           echo "MERGED_CONFIGURATION_PATH=${{ runner.temp }}/labels.yml" >> "$GITHUB_ENV"
 
       - name: Determine whether to dry run
@@ -134,11 +118,6 @@ jobs:
         with:
           name: ${{ env.CONFIGURATIONS_ARTIFACT }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
       - name: Merge label configuration files
         run: |
           # Merge all configuration files
@@ -146,15 +125,14 @@ jobs:
           cat "${{ env.CONFIGURATIONS_FOLDER }}"/*.@(yml|yaml) > "${{ env.MERGED_CONFIGURATION_PATH }}"
 
       - name: Install github-label-sync
-        run: npm install
+        run: sudo npm install --global github-label-sync
 
       - name: Sync labels
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # See: https://github.com/Financial-Times/github-label-sync
-          npx \
-            github-label-sync \
-              --labels "${{ env.MERGED_CONFIGURATION_PATH }}" \
-              ${{ steps.dry-run.outputs.flag }} \
-              ${{ github.repository }}
+          github-label-sync \
+            --labels "${{ env.MERGED_CONFIGURATION_PATH }}" \
+            ${{ steps.dry-run.outputs.flag }} \
+            ${{ github.repository }}
