--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -57,8 +57,10 @@ jobs:
         board:
           - fqbn: arduino:mbed_portenta:envie_m7
             platform-name: arduino:mbed_portenta
+            artifact-name-suffix: arduino-mbed_portenta-envie_m7
           - fqbn: arduino:mbed_giga:giga
             platform-name: arduino:mbed_giga
+            artifact-name-suffix: arduino-mbed_giga-giga
 
         include:
           - board:
@@ -99,6 +101,6 @@ jobs:
       - name: Save memory usage change report as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.SKETCHES_REPORTS_PATH }}
+          name: sketches-report-${{ matrix.board.artifact-name-suffix }}
           if-no-files-found: error
           path: ${{ env.SKETCHES_REPORTS_PATH }}
